--- a/01-docker-terraform/2_docker_sql/pg-test-connection.ipynb
+++ b/01-docker-terraform/2_docker_sql/pg-test-connection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d7e4358",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a1096f72",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f569baa5",
    "metadata": {},
    "outputs": [],
@@ -42,17 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "523f5cf5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x23600a83580>"
+       "<sqlalchemy.engine.base.Connection at 0x7842780c8d40>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9f5a61a1",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "0       1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "e1c509ea",
    "metadata": {},
    "outputs": [
@@ -159,10 +159,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>public</td>\n",
-       "      <td>yellow_tripdata_trip</td>\n",
+       "      <td>green_tripdata</td>\n",
        "      <td>root</td>\n",
        "      <td>None</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>public</td>\n",
+       "      <td>zones</td>\n",
+       "      <td>root</td>\n",
+       "      <td>None</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -172,14 +183,16 @@
        "</div>"
       ],
       "text/plain": [
-       "  schemaname             tablename tableowner tablespace  hasindexes  \\\n",
-       "0     public  yellow_tripdata_trip       root       None       False   \n",
+       "  schemaname       tablename tableowner tablespace  hasindexes  hasrules  \\\n",
+       "0     public  green_tripdata       root       None        True     False   \n",
+       "1     public           zones       root       None        True     False   \n",
        "\n",
-       "   hasrules  hastriggers  rowsecurity  \n",
-       "0     False        False        False  "
+       "   hastriggers  rowsecurity  \n",
+       "0        False        False  \n",
+       "1        False        False  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,18 +601,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
   }
  },
  "nbformat": 4,
